Adding category endpoints
